обновление руководства + исправил npe автокорреляции

--- a/src/main/resources/html/algorythms.html
+++ b/src/main/resources/html/algorythms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,51 +8,65 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
     <ul>
         <li><a href="view.html">Внешний вид</a></li>
         <li><a href="create.html">Создание проекта</a></li>
+        <li><a href="format.html">Формат файла с данными</a></li>
         <li><a href="load.html">Загрузка проекта</a></li>
         <li><a href="work.html">Работа с проектом</a></li>
     </ul></li>
     <li><a href="algorythms.html">Описание алгоритмов для проводимых расчетов</a></li>
 </ul>
 <h1>2.	Описание алгоритмов для проводимых расчетов</h1>
-<a href="#2.1"><h2>2.1.    Основные понятия и определения.</h2></a>
-<a href="#2.2"><h2>2.2.    Метод Ньютона</h2></a>
-<a href="#2.3"><h2>2.3.    Интерполяция сплайном</h2></a>
-<a href="#2.4"><h2>2.4.    Метод наименьших квадратов</h2></a>
 <div id="2.1">
     <h2>2.1.    Основные понятия и определения.</h2>
-    <p>Мат. ожидание - среднее значение случайной величины. В рамках данной выборке вычисляется по формуле:</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Мат. ожидание - среднее значение случайной величины. В рамках данной выборке вычисляется по формуле:</p>
     <p align="center">M[X] = (&#8721 <sub>i=1</sub><sup>n</sup> x<sub>i</sub>) / n,</p>
-    <p>где n - длина реализации временного ряда,</p>
-    <p>x<sub>i</sub> - значение временного ряда в момент времени i</p>
-    <p>Дисперсия - мера разброса значений данной случайной величины , то есть её отклонения от мат. ожидания. В рамках данной выборке вычисляется по формуле:</p>
+    <p>где n - длина реализации временного ряда, x<sub>i</sub> - значение временного ряда в момент времени i</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Дисперсия - мера разброса значений данной случайной величины , то есть её отклонения от мат. ожидания.
+        В рамках данной выборке вычисляется по формуле:</p>
     <p align="center">D[X] =(&#8721 <sub>i=1</sub><sup>n</sup> ((x<sub>i</sub> - M[X])<sup>2</sup>)) / n</p>
-    <p>Корреляционная функция - функция времени или пространственных координат, которая задает корреляцию в системах со случайными процессами.</p>
-    <p>Для расчета автокорелляционной функции использовался следующий алгоритм:</p>
-    <p>1) Рассчитывается автокорреляционная матрица</p>
-    <p>2) Рассчитывается среднее значение на диагоналях этой матрицы</p>
-    <p>3) Строится соответствие между номером диагонали и рассчитанным средним значением на этой диагонали.</p>
-    <p>Таким образом, получаем зависимость корреляции от лага (сдвига).</p>
-    <p>закон распределения вероятностей - это закон, описывающий область значений случайной величины и вероятности их исхода (появления).</p>
-    <p>Для построения графика закона распределения вероятностей вся область значений случайного временного ряда разбивается на интервалы. Далее для каждого такого интервала (x<sub>i</sub>, x<sub>i+1</sub>) рассчитывается количество значений временного ряда x&#732, таких что: x&#732 принадлежит (x<sub>i</sub>, x<sub>i+1</sub>)</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Корреляционная функция - функция времени или пространственных координат, которая задает корреляцию в системах со случайными процессами.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Для расчета автокорелляционной функции использовался следующий алгоритм:</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; 1) Рассчитывается автокорреляционная матрица</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; 2) Рассчитывается среднее значение на диагоналях этой матрицы</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; 3) Строится соответствие между номером диагонали и рассчитанным средним значением на этой диагонали.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Таким образом, получаем зависимость корреляции от лага (сдвига).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Закон распределения вероятностей - это закон, описывающий область значений случайной величины и вероятности их исхода (появления).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Для построения графика закона распределения вероятностей вся область значений случайного временного ряда разбивается на интервалы.
+        Далее для каждого такого интервала (x<sub>i</sub>, x<sub>i+1</sub>) рассчитывается количество значений временного ряда x&#732, таких что: x&#732 принадлежит
+        (x<sub>i</sub>, x<sub>i+1</sub>)</p>
 </div>
 <div id="2.2">
     <h2>2.2.    Метод Ньютона</h2>
-    <p>Если узлы интерполяции равноотстоящие и упорядочены по величине, так что , то есть , то интерполяционный многочлен можно записать в форме Ньютона.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Если узлы интерполяции равноотстоящие и упорядочены по величине, так что , то есть , то интерполяционный многочлен можно записать в форме Ньютона.</p>
 </div>
 <div id="2.3">
     <h2>2.3.    Интерполяция сплайном</h2>
-    <p>Spline - это определенная в некоторой области G ∈ R<sup>n</sup> кусочно-полиномиальная функция из класса Cr(G).</p>
-    <p>Таким образом существует разбиение области G на подобласти такое, что внутри каждой подобласти сплайн представляет собой полином некоторой степени М.</p>
-    <p>Интерполяция при помощи сплайнов называется сплайн-интерполяцией.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Spline - это определенная в некоторой области G ∈ R<sup>n</sup> кусочно-полиномиальная функция из класса Cr(G).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Таким образом существует разбиение области G на подобласти такое, что внутри каждой подобласти сплайн представляет собой полином некоторой степени М.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Интерполяция при помощи сплайнов называется сплайн-интерполяцией.</p>
 </div>
 <div id="2.4">
-    <h2>2.4.    Метод наименьших квадратов</h2>
-    <p>Нахождение коэффициентов линейной зависимости, при которых функция двух переменных а и b принимает наименьшее значение. То есть, при данных а и b сумма квадратов отклонений экспериментальных данных от найденной прямой будет наименьшей.</p>
-</div>
+    <h2>2.4.    Автоковариационные и автокорреляционные функции</h2>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Автоковариационный коэффициент &#947<sub>k</sub> для задержки k изменяет ковариацию между двумя величинами z<sub>t</sub>
+        и z<sub>t+k</sub>, разделенными интервалом k. Функция &#947<sub>k</sub> от задержки k называется автоковариационной функцией
+        {&#947<sub>k</sub>}, стохастического процесса. Аналогично функция &#961<sub>k</sub> от задержки k называется автокорреляционной функцией
+        {&#961<sub>k</sub>} стохастического процесса. Заметим, что автокорреляционная функция безразмерна,
+        т. е. независима от масштаба изменения временных рядов. Так как y<sub>k</sub> = &#961<sub>k</sub>&#963<sub>k</sub><sup>2</sup>,
+        знание автокорреляционной функции {&#961<sub>k</sub>} и дисперсии &#963<sub>z</sub><sup>2</sup> эквивалентно знанию
+        автокорреляционной функции {&#947<sub>k</sub>}.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Автокорреляционная функция, представлена на рис. 6 как график диагональных элементов
+        автокорреляционной матрицы, показывает, как изменяется корреляция между двумя
+        любыми членами ряда по мере изменения расстояния между ними. Так как &#961<sub>k</sub> = &#961<sub>-k</sub>, автокорреляционная
+        функция должна быть симметричной относительно нуля и на практике необходимо
+        изображать только правую половину функции (для положительных k).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Из ранее сказанного следует, что нормальный стационарный процесс z<sub>t</sub> полностью описывается его
+    средним значением &#956 и его автоковариационной функцией {&#947<sub>k<sub>1</sub></sub>}, или, что эквивалентно, его средним
+    значениям &#956, дисперсией &#963<sub>z</sub><sup>2</sup> и автокорреляционной функцией &#961<sub>k</sub>.</p>
+    <img src="pic6.jpg" alt="Автокорреляционная матрица и соответствующая автокорреляционная функция">
+    <p align="center">Рисунок 6. Автокорреляционная матрица и соответствующая автокорреляционная функция.</p></div>
 </body>
 </html>
