--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -8,11 +8,12 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
     <ul>
         <li><a href="view.html">Внешний вид</a></li>
         <li><a href="create.html">Создание проекта</a></li>
+        <li><a href="format.html">Формат файла с данными</a></li>
         <li><a href="load.html">Загрузка проекта</a></li>
         <li><a href="work.html">Работа с проектом</a></li>
     </ul></li>
@@ -22,17 +23,17 @@
 <h2>Руководство пользователя</h2>
 <h3>Оглавление</h3>
 <ul>
-    <li><a href="annotation.html">Аннотация</a></li>
-    <li>
-        <a href="instruction.html">Инструкция работы с системой</a>
+    <li><a href="annotation.html">1.    Общая информация</a></li>
+    <li><a href="instruction.html">2.   Инструкция работы с системой</a>
         <ul>
-            <li><a href="view.html">Внешний вид</a></li>
-            <li><a href="create.html">Создание проекта</a></li>
-            <li><a href="load.html">Загрузка проекта</a></li>
-            <li><a href="work.html">Работа с проектом</a></li>
+            <li><a href="view.html">2.1.    Внешний вид</a></li>
+            <li><a href="create.html">2.2.  Создание проекта</a></li>
+            <li><a href="format.html">2.3.  Формат файла с данными</a></li>
+            <li><a href="load.html">2.4.    Загрузка проекта</a></li>
+            <li><a href="work.html">2.5.    Работа с проектом</a></li>
         </ul>
     </li>
-    <li><a href="algorythms.html">Описание алгоритмов для проводимых расчетов</a></li>
+    <li><a href="algorythms.html">3.    Описание алгоритмов для проводимых расчетов</a></li>
 </ul>
 </body>
 </html>
