--- a/src/main/resources/html/work.html
+++ b/src/main/resources/html/work.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
@@ -8,11 +8,12 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
         <ul>
             <li><a href="view.html">Внешний вид</a></li>
             <li><a href="create.html">Создание проекта</a></li>
+            <li><a href="format.html">Формат файла с данными</a></li>
             <li><a href="load.html">Загрузка проекта</a></li>
             <li><a href="work.html">Работа с проектом</a></li>
         </ul></li>
@@ -20,8 +21,6 @@
 </ul>
 <h1>1.	Инструкция работы с системой</h1>
 <h2>1.4.	Работа с проектом</h2>
-<a href="#1.4.1"><h3>1.4.1.	Проведение расчетов</h3></a>
-<a href="#1.4.2"><h3>1.4.2. Работа с графиком</h3></a>
 <div id="1.4.1">
     <h3>1.4.1.	Проведение расчетов</h3>
     <p>&nbsp;&nbsp;&nbsp;&nbsp; На рисунке 4 показан пример проекта. Проект включает в себя вкладки с выборками, а также вкладки с расчетами, относящиеся к конкретной выборке.</p>
@@ -41,22 +40,22 @@
     <img src="pic5.jpg" alt="Работа с проектом">
     <p align="center">Рисунок 5. Работа с проектом</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp; Для расчета необходимо указать все необходимые параметры расчета, указанные в рамке в левом верхнем углу, а также нажать на кнопку «Рассчитать». Результат будет выведен в окне ниже. Если установить флаг «Отобразить на графике», то результат будет не только выведен в соответствующем окне, но и будет отображен на графике. Это также можно увидеть на рисунке 5.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp; По окончании работы с проектом, его необходимо сохранить, выбрав в меню «Файл» пункт «Сохранить проект».</p>
 </div>
 <div id="1.4.2">
     <h3>1.4.2. Работа с графиком</h3>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp; Система предоставляет гибкий механизм работы с графиком. Возможности, предоставляемые системой описаны в таблице 1.</p>
-    <table border="1" cellpadding="20" cellspacing="0">
-        <caption>Таблица 1. Элементы управления графиком.</caption>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp; Система предоставляет гибкий механизм работы с графиком. Возможности, предоставляемые системой описаны в таблице 2.</p>
+    <table border="1" cellpadding="20" cellspacing="0" align="center">
+        <caption>Таблица 2. Элементы управления графиком.</caption>
         <tr>
             <th>Элемент управления</th>
             <th>Действие</th>
             <th>Описание</th>
         </tr>
         <tr>
-            <td rowspan="2">Колесо мыши</td>
+            <td rowspan="3">Колесо мыши</td>
                <td>Крутить вперед</td><td>Приближает график с центрированием в месте нахождения курсора мыши</td>
             <tr><td>Крутить назад</td><td>Отдаляет график с центрированием в месте нахождения курсора мыши</td></tr>
+	    <tr><td>Выделение области</td><td>Масштабирование выбранной области под текущий размер окна</td></tr>
         </tr>
         <tr>
             <td>Правая кнопка мыши</td>
@@ -64,10 +63,10 @@
             <td>Перемещение графика</td>
         </tr>
         <tr>
-            <td rowspan="3">Левая кнопка мыши</td>
+            <td rowspan="2">Левая кнопка мыши</td>
                 <td>Зажать на точке, двигать мышь</td><td>Перемещение точки графика</td>
                 <tr><td>Двойной щелчок</td><td>Масштабирование графика под текущий размер окна</td></tr>
-                <tr><td>Выделение области</td><td>Масштабирование выбранной области под текущий размер окна</td></tr>
+                
         </tr>
     </table>
 </div>
