--- a/src/main/resources/html/create.html
+++ b/src/main/resources/html/create.html
@@ -8,11 +8,12 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
         <ul>
             <li><a href="view.html">Внешний вид</a></li>
             <li><a href="create.html">Создание проекта</a></li>
+            <li><a href="format.html">Формат файла с данными</a></li>
             <li><a href="load.html">Загрузка проекта</a></li>
             <li><a href="work.html">Работа с проектом</a></li>
         </ul></li>
@@ -20,9 +21,9 @@
 </ul>
 <h1>1.	Инструкция работы с системой</h1>
 <h2>1.2.	Создание проекта</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp; Проект создается на основе выборки данных из файла Excel. При создании нового проекта необходимо придумать ему имя и указать путь к файлу в файловой системе. Интерфейс создания нового проекта показан на рисунке 2.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; Проект создается на основе выборки данных из файла формата xlsx. При создании нового проекта необходимо указать название проекта и путь к файлу в файловой системе. Интерфейс создания нового проекта показан на рисунке 2.</p>
 <img src="pic2.jpg" alt="Создание нового проекта">
 <p align="center">Рисунок 2. Создание нового проекта</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp; При нажатии на пункт меню «Сохранить проект», открытый проект будет сохранен в базу данных, после чего его можно будет открывать при помощи пункта меню «Загрузить проект».</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; При этом проект будет сохранен в базу данных, после чего его можно будет открывать при помощи пункта меню «Загрузить проект».</p>
 </body>
 </html>
