--- a/src/main/resources/html/instruction.html
+++ b/src/main/resources/html/instruction.html
@@ -8,11 +8,12 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
         <ul>
             <li><a href="view.html">Внешний вид</a></li>
             <li><a href="create.html">Создание проекта</a></li>
+            <li><a href="format.html">Формат файла с данными</a></li>
             <li><a href="load.html">Загрузка проекта</a></li>
             <li><a href="work.html">Работа с проектом</a></li>
         </ul></li>
@@ -20,6 +21,7 @@
 </ul>
 <a href="view.html"><h2>Внешний вид</h2></a>
 <a href="create.html"><h2>Создание проекта</h2></a>
+<a href="format.html"><h2>Формат файла с данными</h2></a>
 <a href="load.html"><h2>Загрузка проекта</h2></a>
 <a href="work.html"><h2>Работа с проектом</h2></a>
 </body>
