--- a/src/main/resources/html/view.html
+++ b/src/main/resources/html/view.html
@@ -8,11 +8,12 @@
 <body>
 <ul id="navbar">
     <li><a href="main.html">Оглавление</a></li>
-    <li><a href="annotation.html">Аннотация</a></li>
+    <li><a href="annotation.html">Общая информация</a></li>
     <li><a href="instruction.html">Инструкция работы с системой</a>
         <ul>
             <li><a href="view.html">Внешний вид</a></li>
             <li><a href="create.html">Создание проекта</a></li>
+            <li><a href="format.html">Формат файла с данными</a></li>
             <li><a href="load.html">Загрузка проекта</a></li>
             <li><a href="work.html">Работа с проектом</a></li>
         </ul></li>
