исправление интерполяции ньютона, мелкие исправления

--- a/src/main/resources/html/annotation.html
+++ b/src/main/resources/html/annotation.html
@@ -46,7 +46,7 @@
         <tr>
             <td>Викторов Николай</td>
             <td>Главный разработчик</td>
-            <td>vicnik1995@gmail.com</td>
+            <td>v**************.com</td>
         </tr>
         <tr>
             <td>Нестеренко Дмитрий</td>
@@ -78,10 +78,10 @@
 <div id="1.3">
     <h2>1.3.    Системные требования</h2>
     <ul>
-        <li><b>Операционная система: </b>Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1, Windows Vista 64 Bit Service Pack 2</li>
+        <li><b>Операционная система: </b>Windows 10, Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1, Windows Vista 64 Bit Service Pack 2, Ubuntu 14.01</li>
         <li><b>Процессор: </b>Intel Core 2 Quad CPU Q6600 @ 2.40GHz (4 CPUs) / AMD Phenom 9850 Quad-Core Processor (4 CPUs) @ 2.5GHz</li>
-        <li><b>Оперативная память (ОЗУ): </b>4GB</li>
-        <li><b>Свободного места на диске: </b>5MB</li>
+        <li><b>Оперативная память (ОЗУ): </b>2GB</li>
+        <li><b>Свободного места на диске: </b>30MB</li>
         <li>Для работы необходимо наличие JRE 8</li>
     </ul>
 </div>
